# court_proto

./: .env  README.md  configs.json  index.js  package-lock.json  package.json  server.js  supremecourt.users.json
FRONTEND/: READMe.txt
FRONTEND/public/: index.html
FRONTEND/src/: App.js
FRONTEND/src/components/: AdminDash.js  JudgeDash.js  StenographerDash.js  login.js  signup.js
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: security.py
backend/app/db/: database.py
backend/app/routers/: auth.py
backend/app/schemas/: user.py
connectors/: connection.js
controller/: userController.js
middleware/: authMiddleware.js
models/: offerModel.js  productModel.js  theatreModel.js  ticketModel.js  userModel.js
public/: index.html
routes/: userRoutes.js
src/: App.js
src/components/: Admin_Dashboard.js  Admin_dash.js  Case_form.js  Case_recordings.js  Collaborators.js  DefaultLandingPage.js  Judge_dash.js  Login_page.js  PrivateRoute.js  Roles.js  Signup_page.js  Stenographer.js  Users.js
