[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Arya bhatt <heyaryahere@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
pymongo = "^4.9.1"
bcrypt = "^4.2.0"
uvicorn = "^0.30.6"
pydantic = "^2.9.2"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
